# wasmer-php-ffi

./: .gitignore  Cargo.toml  Makefile  composer.json  init.php  psalm.xml
examples/: exports-function.php  imports-exports.php  instance.php
examples/wasm-c-api/: callback.php
package/include/: wasmer_wasm_expanded.h
src/: Engine.php  Entity.php  Exception.php  Imports.php  Instance.php  Module.php  Ownable.php  Releasable.php  Runtime.php  Store.php  Wat.php
src/Exceptions/: Codes.php  Instantiation.php  InvalidFunctionCall.php  Logic.php  Runtime.php  Trap.php  Unsupported.php
src/Types/: Enum.php  Extern.php  ExternType.php  Externalizable.php  Func.php  FuncType.php  Glob.php  GlobalType.php  ImportType.php  Limits.php  Memory.php  MemoryType.php  Mutability.php  Pages.php  Trap.php  Val.php  ValType.php  Vec.php
src/Types/Kind/: Val.php
src/Types/Vec/: Byte.php  Extern.php  ImportType.php  Val.php  ValType.php
stubs/: FFI.php  Wasm.php
